# langchain-course

./: ingestion.py  pyproject.toml  raw_react.py  search.py  tavily_search.py
backend/: core.py
qdrant_storage/: raft_state.json
qdrant_storage/.deleted/5rbDtt/0/: newest_clocks.json  replica_state.json
qdrant_storage/.deleted/5rbDtt/0/segments/27da576f-8132-4a99-9d60-1d0d516077c2/: mutable_id_tracker.mappings
qdrant_storage/.deleted/5rbDtt/0/segments/3700d2c6-4408-4c7e-b4ce-5d64ae9a3efc/: mutable_id_tracker.mappings
qdrant_storage/.deleted/5rbDtt/0/segments/4025baff-33e4-4ae3-a886-a844ccc13331/: mutable_id_tracker.mappings
qdrant_storage/.deleted/5rbDtt/0/segments/7a019134-0bc7-412a-b4a3-d5ff30c66fca/: mutable_id_tracker.mappings
qdrant_storage/.deleted/5rbDtt/0/segments/b2bfe23a-100f-41c6-a219-cd932cf584c0/: mutable_id_tracker.mappings
qdrant_storage/.deleted/zPxJNS/0/: newest_clocks.json
qdrant_storage/.deleted/zPxJNS/0/segments/15db6117-dc0e-45b7-baea-4ed25890247e/: mutable_id_tracker.mappings
qdrant_storage/.deleted/zPxJNS/0/segments/591099b0-970b-402f-ba22-7a40bb40b2bb/: mutable_id_tracker.mappings
qdrant_storage/.deleted/zPxJNS/0/segments/958f63d3-c0cf-4366-8b64-aaa5a6b6f3b4/: mutable_id_tracker.mappings
qdrant_storage/.deleted/zPxJNS/0/segments/d872bfe5-456c-4720-8454-5ba92269db7e/: mutable_id_tracker.mappings
qdrant_storage/collections/langchain_docs/0/: newest_clocks.json
qdrant_storage/collections/langchain_docs/0/segments/05f9d2f5-1d90-4e25-bee2-14a9d30bbf79/: mutable_id_tracker.mappings
(+3 files in other folders)
